fixed more overflow issues

--- a/_sass/_site_layout.scss
+++ b/_sass/_site_layout.scss
@@ -67,6 +67,7 @@ body {
 section {
     padding: var(--root-pad);
     margin-top: var(--base-margin);
+    overflow-y: hidden;
 
     border-radius: var(--border-radius);
     background: var(--bg-section);
