--- a/_sass/_title_layout.scss
+++ b/_sass/_title_layout.scss
@@ -7,7 +7,7 @@
 
 .site-title-frame {
     padding: var(--inner-pad);
-    //overflow: hidden;
+    overflow: hidden;
 
     border-radius: var(--inner-radius);
     background: var(--bg-section);
